--- a/styleguide/source/assets/scss/03-organisms/_member-feature.scss
+++ b/styleguide/source/assets/scss/03-organisms/_member-feature.scss
@@ -11,6 +11,7 @@
       justify-content: flex-end;
       align-items: flex-end;
       height: 70%;
+      margin-top: 0;
 
       & div a {
         display: block;
@@ -35,7 +36,7 @@
       }
 
       .ama__hero-story__media {
-        margin-right: $gutter * -4;
+        margin-right: 0;
 
         img {
           height: 100%;
@@ -54,6 +55,7 @@
         grid-column-end: 1;
         justify-content: flex-start;
       }
+
       .ama__hero-story__media {
         margin-right: $gutter * -4;
       }
